--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 	  <br>
 	</div>
 	<div id=fourth>
-	  <div style="text-align: center;">
+	  <div style="text-align:center;margin-top:200px">
 	    <h1>Upcoming Events</h1>
 	  </div>
 	  <div class=fourth-event><div style="background-image: url('./style/images/events/development.png')"></div><h2>Development</h2><p>We're still in the alpha stages. We're still ironing out the bugs and scripting, to provide you with 24/7 entertainment consisting of shows, new tracks, and live music. It's a long process, so bear with us here.</p></div>
 	  <div class=fourth-event><div style="background-image: url('./style/images/events/hosttrial.png')"></div><h2>Host Trial</h2><p>See yourself as an aspiring radio host? Give yourself a shot at Silhouette! We're currently accepting host trials and experimental shows, so this might be your chance to get yourself on air. Have your voice heard. Here, at Silhouette. <a onClick="window.open('http://www.silhouette.gq/jobs','_blank')">Learn More</a></p></div>
-	  <div class=fourth-event><div style="background-image: url('./style/images/deadbeats/TripSketch.jpg')"></div><h2>Deadbeats W/ the Ghost DJ</h2><p>The Ghost DJ's picks for Deadbeats: TripSketch. Listen in from 23:00 to 3:00 every night.</p></div>
+	  <div class=fourth-event><div style="background-image: url('./style/images/deadbeats/Tripsketch.jpg')"></div><h2>Deadbeats W/ the Ghost DJ</h2><p>The Ghost DJ's picks for Deadbeats: Tripsketch. Listen in from 23:00 to 3:00 every night.</p></div>
 	</div>
 	<div id=third-calendarcontainer>
 	  <div id=third-cover></div>
@@ -150,10 +150,10 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=mon-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=mon-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=mon-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=mon-15>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=mon-16>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=mon-17>Drive</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=mon-18>Wind Down</span></a>
+		  <a href="#shuffle"><span class=third-time>15:00</span> - <span class=calendar id=mon-15>Shuffle</span></a>
+		  <a href="#shuffle"><span class=third-time>16:00</span> - <span class=calendar id=mon-16>Shuffle</span></a>
+		  <a href="#drive"><span class=third-time>17:00</span> - <span class=calendar id=mon-17>Drive</span></a>
+		  <a href="#winddown"><span class=third-time>18:00</span> - <span class=calendar id=mon-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=mon-19>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=mon-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=mon-21>Evening Chill</span></a>
@@ -172,16 +172,16 @@
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=tue-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=tue-07>Woke</span></a>
 		  <a href="#woke"><span class=third-time>08:00</span> - <span class=calendar id=tue-08>Woke</span></a>
-		  <a href="#woke"><span class=third-time>09:00</span> - <span class=calendar id=tue-09>Woke</span></a>
-		  <a href="#highway"><span class=third-time>10:00</span> - <span class=calendar id=tue-10>Highway</span></a>
-		  <a href="#highway"><span class=third-time>11:00</span> - <span class=calendar id=tue-11>Highway</span></a>
-		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=tue-12>Highway</span></a>
-		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=tue-13>Highway</span></a>
-		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=tue-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=tue-15>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=tue-16>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=tue-17>Drive</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=tue-18>Wind Down</span></a>
+		  <a href="#industry"><span class=third-time>09:00</span> - <span class=calendar id=tue-09>Industry</span></a>
+		  <a href="#industry"><span class=third-time>10:00</span> - <span class=calendar id=tue-10>Industry</span></a>
+		  <a href="#industry"><span class=third-time>11:00</span> - <span class=calendar id=tue-11>Industry</span></a>
+		  <a href="#industry"><span class=third-time>12:00</span> - <span class=calendar id=tue-12>Industry</span></a>
+		  <a href="#industry"><span class=third-time>13:00</span> - <span class=calendar id=tue-13>Industry</span></a>
+		  <a href="#industry"><span class=third-time>14:00</span> - <span class=calendar id=tue-14>Industry</span></a>
+		  <a href="#shuffle"><span class=third-time>15:00</span> - <span class=calendar id=tue-15>Shuffle</span></a>
+		  <a href="#shuffle"><span class=third-time>16:00</span> - <span class=calendar id=tue-16>Shuffle</span></a>
+		  <a href="#drive"><span class=third-time>17:00</span> - <span class=calendar id=tue-17>Drive</span></a>
+		  <a href="#winddown"><span class=third-time>18:00</span> - <span class=calendar id=tue-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=tue-19>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=tue-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=tue-21>Evening Chill</span></a>
@@ -206,10 +206,10 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=wed-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=wed-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=wed-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=wed-15>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=wed-16>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=wed-17>Drive</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=wed-18>Wind Down</span></a>
+		  <a href="#shuffle"><span class=third-time>15:00</span> - <span class=calendar id=wed-15>Shuffle</span></a>
+		  <a href="#shuffle"><span class=third-time>16:00</span> - <span class=calendar id=wed-16>Shuffle</span></a>
+		  <a href="#drive"><span class=third-time>17:00</span> - <span class=calendar id=wed-17>Drive</span></a>
+		  <a href="#winddown"><span class=third-time>18:00</span> - <span class=calendar id=wed-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=wed-19>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=wed-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=wed-21>Evening Chill</span></a>
@@ -234,10 +234,10 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=thu-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=thu-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=thu-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=thu-15>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=thu-16>Shuffle</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=thu-17>Drive</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=thu-18>Wind Down</span></a>
+		  <a href="#shuffle"><span class=third-time>15:00</span> - <span class=calendar id=thu-15>Shuffle</span></a>
+		  <a href="#shuffle"><span class=third-time>16:00</span> - <span class=calendar id=thu-16>Shuffle</span></a>
+		  <a href="#drive"><span class=third-time>17:00</span> - <span class=calendar id=thu-17>Drive</span></a>
+		  <a href="#winddown"><span class=third-time>18:00</span> - <span class=calendar id=thu-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=thu-19>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=thu-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=thu-21>Evening Chill</span></a>
@@ -262,15 +262,15 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=fri-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=fri-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=fri-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=fri-15>Loose</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=fri-16>Loose</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=fri-17>Loose</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=fri-18>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=fri-19>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=fri-20>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=fri-21>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=fri-22>Drop 360</span></a>
-		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=fri-23>Drop 360</span></a>
+		  <a href="#loose"><span class=third-time>15:00</span> - <span class=calendar id=fri-15>Loose</span></a>
+		  <a href="#loose"><span class=third-time>16:00</span> - <span class=calendar id=fri-16>Loose</span></a>
+		  <a href="#loose"><span class=third-time>17:00</span> - <span class=calendar id=fri-17>Loose</span></a>
+		  <a href="#drop360"><span class=third-time>18:00</span> - <span class=calendar id=fri-18>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>19:00</span> - <span class=calendar id=fri-19>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>20:00</span> - <span class=calendar id=fri-20>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>21:00</span> - <span class=calendar id=fri-21>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>22:00</span> - <span class=calendar id=fri-22>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>23:00</span> - <span class=calendar id=fri-23>Drop 360</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Sat</h1>
@@ -282,23 +282,23 @@
 		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=sat-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=sat-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=sat-06>Woke</span></a>
-		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=sat-07>Span</span></a>
-		  <a href="#woke"><span class=third-time>08:00</span> - <span class=calendar id=sat-08>Span</span></a>
-		  <a href="#woke"><span class=third-time>09:00</span> - <span class=calendar id=sat-09>Span</span></a>
-		  <a href="#highway"><span class=third-time>10:00</span> - <span class=calendar id=sat-10>Span</span></a>
-		  <a href="#highway"><span class=third-time>11:00</span> - <span class=calendar id=sat-11>Span</span></a>
-		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=sat-12>Top Picks</span></a>
-		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=sat-13>Top Picks</span></a>
-		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=sat-14>Top Picks</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=sat-15>Top Picks</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=sat-16>Loose</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=sat-17>Loose</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=sat-18>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=sat-19>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sat-20>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=sat-21>Drop 360</span></a>
-		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=sat-22>Drop 360</span></a>
-		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=sat-23>Drop 360</span></a>
+		  <a href="#wakeup"><span class=third-time>07:00</span> - <span class=calendar id=sat-07>Wake Up</span></a>
+		  <a href="#wakeup"><span class=third-time>08:00</span> - <span class=calendar id=sat-08>Wake Up</span></a>
+		  <a href="#wakeup"><span class=third-time>09:00</span> - <span class=calendar id=sat-09>Wake Up</span></a>
+		  <a href="#span"><span class=third-time>10:00</span> - <span class=calendar id=sat-10>Span</span></a>
+		  <a href="#span"><span class=third-time>11:00</span> - <span class=calendar id=sat-11>Span</span></a>
+		  <a href="#toppicks"><span class=third-time>12:00</span> - <span class=calendar id=sat-12>Top Picks</span></a>
+		  <a href="#toppicks"><span class=third-time>13:00</span> - <span class=calendar id=sat-13>Top Picks</span></a>
+		  <a href="#toppicks"><span class=third-time>14:00</span> - <span class=calendar id=sat-14>Top Picks</span></a>
+		  <a href="#toppicks"><span class=third-time>15:00</span> - <span class=calendar id=sat-15>Top Picks</span></a>
+		  <a href="#loose"><span class=third-time>16:00</span> - <span class=calendar id=sat-16>Loose</span></a>
+		  <a href="#loose"><span class=third-time>17:00</span> - <span class=calendar id=sat-17>Loose</span></a>
+		  <a href="#drop360"><span class=third-time>18:00</span> - <span class=calendar id=sat-18>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>19:00</span> - <span class=calendar id=sat-19>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>20:00</span> - <span class=calendar id=sat-20>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>21:00</span> - <span class=calendar id=sat-21>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>22:00</span> - <span class=calendar id=sat-22>Drop 360</span></a>
+		  <a href="#drop360"><span class=third-time>23:00</span> - <span class=calendar id=sat-23>Drop 360</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Sun</h1>
@@ -316,12 +316,12 @@
 		  <a href="#highway"><span class=third-time>10:00</span> - <span class=calendar id=sun-10>Span</span></a>
 		  <a href="#highway"><span class=third-time>11:00</span> - <span class=calendar id=sun-11>Span</span></a>
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=sun-12>Span</span></a>
-		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=sun-13>Airtime</span></a>
-		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=sun-14>Airtime</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=sun-15>Airtime</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=sun-16>Span</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=sun-17>Span</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=sun-18>Evening Chill</span></a>
+		  <a href="#airtime"><span class=third-time>13:00</span> - <span class=calendar id=sun-13>Airtime</span></a>
+		  <a href="#airtime"><span class=third-time>14:00</span> - <span class=calendar id=sun-14>Airtime</span></a>
+		  <a href="#airtime"><span class=third-time>15:00</span> - <span class=calendar id=sun-15>Airtime</span></a>
+		  <a href="#span"><span class=third-time>16:00</span> - <span class=calendar id=sun-16>Span</span></a>
+		  <a href="#span"><span class=third-time>17:00</span> - <span class=calendar id=sun-17>Span</span></a>
+		  <a href="#eveningchill"><span class=third-time>18:00</span> - <span class=calendar id=sun-18>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=sun-19>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sun-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=sun-21>Evening Chill</span></a>
@@ -347,7 +347,7 @@
 	  <div id=deadbeats class=fifth-anchor></div>
 	  <h1>Deadbeats</h1>
 	  <div id=sixth-container>
-	    <div id=sixth-top style="background-image:url('./style/images/deadbeats/TripSketch.jpg')"></div>
+	    <div id=sixth-top style="background-image:url('./style/images/deadbeats/Tripsketch.jpg')"></div>
 		<div class=sixth-top-size><div class=sixth-top-back style="background-image:url('./style/images/deadbeats/Vaporwave.jpg');z-index: -1"></div></div>
 		<div class=sixth-top-size><div class=sixth-top-back style="background-image:url('./style/images/deadbeats/Electro Swing.jpg');z-index: -2"></div></div>
 	  </div>
@@ -371,7 +371,7 @@
 	<div id=footer-social>
 	  <img src="./style/images/instagram.svg" onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')"></img>
 	  <img src="./style/images/twitch.png" onClick="window.open('https://www.twitch.tv/silhouettegq/','_blank')"></img>
-	  <img src="./style/images/discord.svg" onClick="window.open('https://discord.gg/ZVeEfbq','_blank')" style="background-color:black"></img>
+	  <img src="./style/images/discord.svg" onClick="window.open('https://discord.gg/ZVeEfbq','_blank')"></img>
 	</div>
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 	  <input type="hidden" name="cmd" value="_s-xclick" />
