--- a/index.html
+++ b/index.html
@@ -279,14 +279,14 @@
 		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=sat-01>Deadbeats</span></a>
 		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=sat-01>Deadbeats</span></a>
 		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=sat-03>Deadbeats</span></a>
-		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=sat-04>Woke</span></a>
-		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=sat-05>Woke</span></a>
-		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=sat-06>Woke</span></a>
+		  <a href="#wakeup"><span class=third-time>04:00</span> - <span class=calendar id=sat-04>Wake Up</span></a>
+		  <a href="#wakeup"><span class=third-time>05:00</span> - <span class=calendar id=sat-05>Wake Up</span></a>
+		  <a href="#wakeup"><span class=third-time>06:00</span> - <span class=calendar id=sat-06>Wake Up</span></a>
 		  <a href="#wakeup"><span class=third-time>07:00</span> - <span class=calendar id=sat-07>Wake Up</span></a>
 		  <a href="#wakeup"><span class=third-time>08:00</span> - <span class=calendar id=sat-08>Wake Up</span></a>
 		  <a href="#wakeup"><span class=third-time>09:00</span> - <span class=calendar id=sat-09>Wake Up</span></a>
-		  <a href="#span"><span class=third-time>10:00</span> - <span class=calendar id=sat-10>Span</span></a>
-		  <a href="#span"><span class=third-time>11:00</span> - <span class=calendar id=sat-11>Span</span></a>
+		  <a href="#swing"><span class=third-time>10:00</span> - <span class=calendar id=sat-10>Swing</span></a>
+		  <a href="#swing"><span class=third-time>11:00</span> - <span class=calendar id=sat-11>Swing</span></a>
 		  <a href="#toppicks"><span class=third-time>12:00</span> - <span class=calendar id=sat-12>Top Picks</span></a>
 		  <a href="#toppicks"><span class=third-time>13:00</span> - <span class=calendar id=sat-13>Top Picks</span></a>
 		  <a href="#toppicks"><span class=third-time>14:00</span> - <span class=calendar id=sat-14>Top Picks</span></a>
@@ -319,8 +319,8 @@
 		  <a href="#airtime"><span class=third-time>13:00</span> - <span class=calendar id=sun-13>Airtime</span></a>
 		  <a href="#airtime"><span class=third-time>14:00</span> - <span class=calendar id=sun-14>Airtime</span></a>
 		  <a href="#airtime"><span class=third-time>15:00</span> - <span class=calendar id=sun-15>Airtime</span></a>
-		  <a href="#span"><span class=third-time>16:00</span> - <span class=calendar id=sun-16>Span</span></a>
-		  <a href="#span"><span class=third-time>17:00</span> - <span class=calendar id=sun-17>Span</span></a>
+		  <a href="#swing"><span class=third-time>16:00</span> - <span class=calendar id=sun-16>Swing</span></a>
+		  <a href="#swing"><span class=third-time>17:00</span> - <span class=calendar id=sun-17>Swing</span></a>
 		  <a href="#eveningchill"><span class=third-time>18:00</span> - <span class=calendar id=sun-18>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=sun-19>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sun-20>Evening Chill</span></a>
